2008-05-13  Perry McFarlane  <perry_m@fastmail.fm>
* configure.ac: nonlinear mixing minor fix


2008-05-11  Perry McFarlane  <perry_m@fastmail.fm>
* dos/atari_vga.c, configure.ac: Atari_PaletteUpdate
* win32/sound.c, pokeysnd.h SND_STEREO removed (obsolete)


2008-05-10  Perry McFarlane  <perry_m@fastmail.fm>
* mzpokeysnd.c, pokyemix.inc: use shorts for smaller file size with table


2008-05-09  Perry McFarlane  <perry_m@fastmail.fm>
* mzpokeysnd.c, pokey.c: fixed two-tone


2008-05-08  Petr Stehlik  <pstehlik@sophics.cz>
* atari.c: get rid of #ifdef USE_CLOCK and also #ifdef DONT_SYNC_WITH_HOST
* configure.ac: get rid of USE_CLOCK for Falcon


2008-05-07  Petr Stehlik  <pstehlik@sophics.cz>
* screen.c: DrawAtariSpeed() now computes the real speed by itself and always
  shows it (if enabled) even if it is at 100% or around (previously it was
  hidden when in range 99% - 101%). It even shows speed < 100% (previously
  it didn't) - hopefully this will help profiling various ./configure
  options on slow Atari800 hosts.

* atari.c: just some cleanup around the atari_sync(), no functional changes.


2008-05-07  Perry McFarlane  <perry_m@fastmail.fm>
* mzpokeysnd.c, configure.ac, pokey.h, pokeymix.inc: Nonlinear mixing,
  two-tone filter, corrected STIMER.


2008-05-05  Perry McFarlane  <perry_m@fastmail.fm>
* javanvm/atari_javanvm.c, atari_sdl.c: remove // comments
* javanvm/atari800.java: fix frame.pack()
* Makefile.in, DOC/INSTALL: changed to make jar file by default for Java
* Makefile.in: added comments to build from NestedVM javasource compiler


2008-04-16  Piotr Fusik  <fox@scene.pl>
* antic.c, atari.c, memory.c: in C code local variable definitions should
  precede statements


2008-04-16  Achim Haertel  <achim.haertel@e-technik.tu-chemnitz.de>
* cassette.[ch], pia.c, pokey.c, screen.c, sio.[ch]:
  implemented writing to raw cassette files


2008-04-08  Perry McFarlane  <perry_m@fastmail.fm>